<resources>
    <string name="app_name">KUAS AP</string>
    <string name="update_note_title">Update Notes %s</string>
    <string name="update_note_content">Update：\n　 - New Schedule provide by Firebase\n　 - Redesign News page, Add recommended shortcuts</string>
    <string name="splash_content">我們全都包了\n只剩下學校不包我們</string>
    <string name="share">Share</string>
    <string name="teacher_confirm_title">Are you a teacher?</string>
    <string name="teacher_confirm_content">This App only for students!</string>
    <string name="continue_to_use">Continue</string>
    <string name="logout">Logout</string>
    <string name="click_to_view">View</string>
    <string name="login_success">Login success,\nclick menu to view.</string>
    <string name="something_error">Error Occurred.</string>
    <string name="timeout_message">Try again later, Connection Timeout</string>
    <string name="login_first">Please login</string>
    <string name="logout_check">Are you sure you want to log out?</string>
    <string name="login">Login</string>
    <string name="dot_ap">AP</string>
    <string name="dot_leave">Leave</string>
    <string name="dot_bus">Bus</string>
    <string name="schedule">Events</string>
    <string name="loading">Loading&#8230;</string>
    <string name="id_hint">Student ID</string>
    <string name="password_hint">Password</string>
    <string name="remember_password">Remember</string>
	  <string name="keep_login">Keep login</string>
    <string name="version">v.%s</string>
    <string name="login_ing">Logging&#8230;</string>
    <string name="call_phone_title">Call this number</string>
    <string name="call_phone_content">Are you sure to call \"%s\"?</string>
    <string name="call_phone">Call</string>
    <string name="determine">Yes</string>
    <string name="cancel">No</string>
    <string name="add_cal_content">Are you sure to add \"%s\" to your calendar?</string>
    <string name="click_to_retry">An error occurred, click to retry</string>
    <string name="bus_pick_date">Chosen Date: %s</string>
    <string name="bus_not_pick_date">Chosen Date</string>
    <string name="bus_count" formatted="false">(%s / %s)</string>
    <string name="bus_jiangong_reservations">To YanChao, Scheduled date：</string>
    <string name="bus_yanchao_reservations">To JianGong, Scheduled date：</string>
    <string name="bus_jiangong">To YanChao, Departure time：</string>
    <string name="bus_yanchao">To JianGong, Departure time：</string>
    <string name="bus_jiangong_reserved">√ To YanChao, Departure time：</string>
    <string name="bus_yanchao_reserved">√ To JianGong, Departure time：</string>
    <string name="back">Back</string>
    <string name="bus_reserve">Bus Reservation</string>
    <string name="bus_cancel_reserve">Cancel Bus Reservation</string>
    <string name="bus_reserve_confirm_title"><b>Reserve</b> this bus?</string>
    <string name="bus_reserve_confirm_content" formatted="false">Are you sure to reserve a seat from %s at %s ?</string>
    <string name="bus_cancel_reserve_confirm_title"><b>Cancel</b> this reservation?</string>
    <string name="bus_cancel_reserve_confirm_content" formatted="false">Are you sure to cancel a seat from %s at %s ?</string>
    <string name="bus_from_jiangong">JianGong to YanChao</string>
    <string name="bus_from_yanchao">YanChao to JianGong</string>
    <string name="bus_reserve_success">Successfully Reserved!</string>
    <string name="bus_cancel_reserve_success">Successfully Canceled!</string>
    <string name="bus_no_reservation">Oops! You haven\'t reserved any bus~\n Ride public transport to save the Earth %s</string>
    <string name="bus_no_bus">Oops! No bus today~\n Please choose another date %s</string>
    <string name="course_no_course">Oops! No class for this semester~\n Please choose another semester %s</string>
    <string name="bus_reserve_fail_title">Oops Book Fail</string>
    <string name="ok">OK</string>
    <string name="course_dialog_messages" formatted="false">Class：%s\nProfessor：%s\nLocation：%s\nTime：%s</string>
    <string name="course_dialog_title">Class Info</string>
    <string name="course_holiday">Rotate Screen to see weekend schedule %s</string>
    <string name="no_internet">No internet connection</string>
    <string name="setting_internet">Internet Settings</string>
    <string name="score_no_score">Oops! No record for this semester~\nPlease choose another semester %s</string>
    <string name="leave_night">Rotate screen to see night school absent record and day of week %s</string>
    <string name="leave_no_leave">Oops! No absent record for this semester~\nPlease choose another semester %s</string>
    <string name="token_expired_title">Re-login Required</string>
    <string name="token_expired_content">Cookie has expired, please re-login!</string>
    <string name="update_content">Update available for KUAS AP!</string>
    <string name="update_title">Updated</string>
    <string name="update">Update</string>
    <string name="function_not_open">Coming Soon~\nDonate to use this feature now!</string>
    <string name="beta_function">This is a beta version, please report a bug if an error
		occurred!</string>
    <string name="bus_not_pick">You have not chosen a date!\n Please choose a date first %s</string>
    <string name="easter_egg_juke">This is not an easter egg</string>
    <string name="skip">Skip</string>
    <string name="share_to">Share to…</string>
    <string name="send_from">Sent from KUAS AP Android</string>
    <string name="donate_title">Donate</string>
    <string name="donate_content">Help and support the programmer\nto use new features!</string>
    <string name="donate_error">Oops!Something went wrong :(\nGO to Google Play\n search for KUAS AP
		Donate \n to support the author!</string>
    <string name="notification_item">Notification</string>
    <string name="other_info">Other</string>
    <string name="other_settings">Settings</string>
    <string name="head_photo_setting">Show Photo</string>
    <string name="course_notify">Class Reminder</string>
    <string name="bus_notify">Bus Reservation Reminder</string>
    <string name="feedback">Suggestions</string>
    <string name="feedback_via_facebook">Message to Facebook Page</string>
    <string name="app_version">App Version</string>
    <string name="course">Class Schedule</string>
    <string name="score">Report Card</string>
    <string name="leave">Absent System</string>
    <string name="bus">Bus Reservation</string>
    <string name="simcourse">Course Selection Sim</string>
    <string name="messages">School Info</string>
    <string name="about">About Us</string>
    <string name="settings">Settings</string>
    <string name="lorem_title">Lorem ipsum</string>
    <string name="lorem_date">2015&#8211;09&#8211;06</string>
    <string name="lorem_time">09:20</string>
    <string name="open_source_android">Android</string>
    <string name="open_source_android_content">https://source.android.com/\n\nCopyright &#169;
		2006-2011 Android Open Source
		Project.\n\nLicensed under the Apache License, Version 2.0 (the "License"); you may not
		use this file except in compliance with the License. You may obtain a copy of the License
		at:\n\nhttp://www.apache.org/licenses/LICENSE-2.0\n\nUnless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</string>
    <string name="open_source_android_async_http">Asynchronous Http Client for Android</string>
    <string name="open_source_android_async_http_content">https://github.com/loopj/android-async-http\n\nCopyright &#169; 2011 James Smith
		(james@loopj.com)\nhttps://loopj.com\n\nLicensed under the Apache License, Version 2.0
		(the "License"); you may not use this file except in compliance with the License. You may
		obtain a copy of the License at\n\nhttps://www.apache.org/licenses/LICENSE-2.0\n\nUnless
		required by applicable law or agreed to in writing, software distributed under the
		License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND,
		either express or implied. See the License for the specific language governing
		permissions and limitations under the License.</string>
    <string name="open_source_gson">Gson</string>
    <string name="open_source_gson_content">https://github.com/google/gson\n\nCopyright 2008 Google
		Inc.\n\nLicensed under the Apache
		License, Version 2.0 (the "License"); you may not use this file except in compliance with
		the License. You may obtain a copy of the License
		at\n\nhttp://www.apache.org/licenses/LICENSE-2.0\n\nUnless required by applicable law or
		agreed to in writing, software distributed under the License is distributed on an "AS IS"
		BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
		License for the specific language governing permissions and limitations under the
		License.</string>
    <string name="open_source_materialdatetimepicker">Material DateTime Picker</string>
    <string name="open_source_materialdatetimepicker_content">https://github.com/wdullaer/MaterialDateTimePicker\n\nCopyright &#169; 2015 Wouter Dullaert\n\nLicensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at\n\nhttp://www.apache.org/licenses/LICENSE-2.0\n\nUnless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</string>
    <string name="open_source_pinned_section_listview">Pinned Section ListView</string>
    <string name="open_source_pinned_section_listview_content">https://github.com/beworker/pinned&#8211;section&#8211;listview\n\nCopyright 2013&#8211;2014 Sergej Shafarenka, halfbit.de\n\nLicensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at\n\nhttp://www.apache.org/licenses/LICENSE-2.0\n\nUnless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</string>
    <string name="open_source_progresswheel">Progress Wheel</string>
    <string name="open_source_progresswheel_content">https://github.com/Todd-Davies/ProgressWheel
		\n\nThe MIT License (MIT)\n\nCopyright &#169; 2015 Todd Davies\n\nPermission is hereby
		granted, free of charge, to any person obtaining a copy of this software and associated
		documentation files (the "Software"), to deal in the Software without restriction,
		including without limitation the rights to use, copy, modify, merge, publish, distribute,
		sublicense, and/or sell copies of the Software, and to permit persons to whom the
		Software is furnished to do so, subject to the following conditions:\n\nThe above copyright
		notice and this permission notice shall be included in all copies or substantial portions
		of the Software.\n\nTHE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
		EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
		FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR
		COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN
		ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE
		SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.</string>
</resources>